Fix voxel background path to absolute and reduce overlay for visibility

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -249,10 +249,11 @@ img {
   width: 100%;
   height: 100%;
   background: #0a0a0a;
-  background-image: url('../../assets/figures/voxel-bg.png');
+  background-image: url('/assets/figures/voxel-bg.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   z-index: 999999;
   display: flex;
   justify-content: center;
@@ -267,7 +268,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.05);
   z-index: 1;
 }
 
